# gnn_tracking

./: .all-contributorsrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codecov.yml  codespell.txt  environment.yml  environment_macos.yml  environment_tigergpu.lock.yml  environment_tigergpu.yml  mlc_config.json  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
configs/first_working_lightning_config/: model.yml
configs/first_working_lightning_config/ecfromml/: model.yml
configs/first_working_lightning_config/ml/: data.yml  model.yml  trainer.yml
configs/first_working_lightning_config/tc/: model.yml
docs/: readme.md  requirements.txt
docs/source/: conf.py  index.rst
environments/: Makefile  README.md  default-lock.yml  default.conda-lock.yml  default.yml  lock.sh  macos.conda-lock.yml  macos.yml  minimal.conda-lock.yml  minimal.yml  testing-linux-64-lock.yml  testing.yml
notebooks/: build_graphs.ipynb  build_point_clouds.ipynb  initial_study.ipynb  test_models.ipynb  working_example.ipynb
slurm/: job_array.py  job_array.slurm  scan_graph_building_params.py  scan_graph_building_params.slurm
src/gnn_tracking/: __init__.py  conftest.py  test_training_integration.py  version.txt
src/gnn_tracking/analysis/: edge_classification.py  efficiencies.py  graphs.py  latent.py  plotutils.py  test_edge_classification.py  test_graphs.py  test_latent.py
src/gnn_tracking/graph_construction/: build_graphs.py  build_graphs.slurm  build_graphs_hpo.py  build_graphs_hpo.slurm  data_transformer.py  graph_builder.py  k_scanner.py  ml_graph_builder.py  radius_scanner.py  readme.md  test_graphs.py
src/gnn_tracking/metrics/: binary_classification.py  cluster_metrics.py  graph_construction.py  losses.py  noise_classification.py  test_cluster_metrics.py  test_losses.py
src/gnn_tracking/models/: dynamic_edge_conv.py  edge_classifier.py  edge_filter.py  graph_construction.py  interaction_network.py  meta.py  mlp.py  noise_classification.py  resin.py  test_edge_classifier.py  test_track_condensation_networks.py  track_condensation_network.py  track_condensation_networks.py
src/gnn_tracking/plotting/: latent.py  test_latent.py
src/gnn_tracking/postprocessing/: dbscanscanner.py  (+3 more)
tests/: conftest.py  test_cluster_metrics.py  test_clusterscanners.py  test_data_transformer.py  test_edge_classifier.py  test_efficiency_plots.py  test_fastrescanner.py  test_graph_analysis.py  test_graph_construction.py  test_graphs.py  test_k_scanner.py  test_latent.py  test_latent_analysis.py  test_lightning_from_config_training.py  test_log.py  test_losses.py  test_ml_graph_builder.py  test_mlp.py  test_nomenclature.py  test_plotting.py  test_plotutils.py  test_point_cloud_builder.py  test_tcn_training.py  test_test_data.py  test_variable_manager.py  test_versioning.py
tests/test_configs/: __init__.py  ec.yml  ml.yml  ml_hetero.yml  ml_heteroenc.yml  tc.yml
tests/test_data/: __init__.py
(+59 files in other folders)
