[metadata]
name = gnntrack
description = Graph Neural Networks for tracking
url = https://github.com/GageDeZoort/gnn_tracking
version = file: src/gnn_tracking/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.7
project_urls =
    Bug Tracker =   https://github.com/GageDeZoort/gnn_tracking/issues
    # Documentation = https://gnntracking.readthedocs.io/
    Source Code =   https://github.com/GageDeZoort/gnn_tracking
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Gage DeZoort
author_email = jgdezoort@gmail.com
maintainer = Gage DeZoort
maintainer_email = jgdezoort@gmail.com

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    matplotlib
    mplhep
    numpy
    pandas
    PyYAML
    scikit_learn
    scipy
    setuptools
    torch
    torch_geometric
    torch_sparse
    torch_scatter
    tabulate
    mdmm
    trackml@git+https://github.com/LAL/trackml-library.git

[options.extras_require]
testing = pytest; pytest-coverage

[options.packages.find]
where=src
