[metadata]
name = gnntrack
description = Graph Neural Networks for tracking
url = https://github.com/GageDeZoort/gnn_tracking
version = file: src/gnn_tracking/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.9
project_urls =
    Bug Tracker =   https://github.com/GageDeZoort/gnn_tracking/issues
    # Documentation = https://gnntracking.readthedocs.io/
    Source Code =   https://github.com/GageDeZoort/gnn_tracking
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Gage DeZoort
author_email = jgdezoort@gmail.com
maintainer = Gage DeZoort
maintainer_email = jgdezoort@gmail.com

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    optuna
    colorlog
    matplotlib
    mplhep
    numpy
    pandas
    PyYAML
    scikit_learn
    scipy
    setuptools
    torch
    torch_geometric
    torch_sparse
    torch_scatter
    tabulate
    mdmm
    importlib_resources; python_version < "3.9.0"
    trackml@git+https://github.com/LAL/trackml-library.git
    gitpython

[options.extras_require]
testing = pytest; pytest-coverage
dev =
    pre-commit
    sphinx
    sphinx_book_theme
    sphinx-autoapi


[options.packages.find]
where=src
